# django-mealdb

./: README.md  pyproject.toml  vercel.json
mealdb/: asgi.py  settings.py  urls.py  wsgi.py
recipe/: services.py  urls.py  views.py
recipe/templatetags/: recipe_tags.py
static/css/: style.css
static/js/: main.js
templates/recipe/: index.html
templates/recipe/partials/: categories_list.html  meal_detail.html  meal_grid.html
