[project]
name = "django-mealdb"
version = "0.1.0"
description = ""
authors = [
    {name = "Dany-cm",email = "danycmwow@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "django-htmx (>=1.26.0,<2.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "python-decouple (>=3.8,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
